ADF/templates-base/02-azuredeploy-NSG.spoke.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "Prefix": {
      "type": "string",
      "defaultValue": "AZE2",
      "allowedValues": [
        "AZE2",
        "AZC1",
        "AEU2",
        "ACU1"
      ]
    },
    "Environment": {
      "type": "string",
      "defaultValue": "D",
      "allowedValues": [
        "I",
        "D",
        "U",
        "P",
        "S",
        "G",
        "A"
      ]
    },
    "DeploymentID": {
      "type": "string",
      "defaultValue": "1",
      "allowedValues": [
        "0",
        "1",
        "2",
        "3",
        "4",
        "5",
        "6",
        "7",
        "8",
        "9"
      ]
    },
    "Stage": {
      "type": "object"
    },
    "Extensions": {
      "type": "object"
    },
    "Global": {
      "type": "object"
    },
    "DeploymentInfo": {
      "type": "object"
    },
    "vmAdminPassword": {
      "type": "securestring"
    },
    "devOpsPat": {
      "type": "securestring"
    },
    "sshPublic": {
      "type": "securestring"
    }
  },
  "variables": {

    "Deployment": "[concat(parameters('Prefix'),'-',parameters('Global').OrgName,'-',parameters('Global').Appname,'-',parameters('Environment'),parameters('DeploymentID'))]",
    "Deploymentnsg": "[concat(parameters('Prefix'),'-',parameters('Global').OrgName,'-', parameters('Global').AppName,'-',parameters('Environment'),parameters('DeploymentID'),if(equals( concat(parameters('Environment'),parameters('DeploymentID')),'P0') ,'-Hub','-Spoke'))]",

    "VnetID": "[resourceId('Microsoft.Network/virtualNetworks', concat(Variables('Deployment'),'-vn'))]",

    "OMSworkspaceName": "[replace(concat(variables('Deployment'),'LogAnalytics'),'-','')]",
    "OMSworkspaceID": "[resourceid('Microsoft.OperationalInsights/workspaces/',variables('OMSworkspaceName'))]"


  },
  "resources": [
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('Deploymentnsg'),'-nsgSNAD01')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
        ]
      },
      "resources": [
        {
          "type": "providers/diagnosticSettings",
          "name": "Microsoft.Insights/service",
          "dependsOn": [
            "[concat(variables('Deploymentnsg'),'-nsgSNAD01')]"
          ],
          "apiVersion": "2015-07-01",
          "properties": {
            "workspaceId": "[variables('OMSworkspaceID')]",
            "logs": [
              {
                "category": "NetworkSecurityGroupEvent",
                "enabled": true
              },
              {
                "category": "NetworkSecurityGroupRuleCounter",
                "enabled": true
              }
            ]
          }
        }
      ]
    },
    {
      "apiVersion": "2018-07-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('Deploymentnsg'),'-nsgSNWAF01')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "WAF_Default_Inbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "65200-65535",
              "sourceAddressPrefix": "GatewayManager",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound",
              "sourcePortRanges": [
              ],
              "destinationPortRanges": [
              ],
              "sourceAddressPrefixes": [
              ],
              "destinationAddressPrefixes": [
              ]
            }
          },
          {
            "name": "WAF_Web_Inbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1010,
              "direction": "Inbound",
              "sourcePortRanges": [
              ],
              "destinationPortRanges": [
                "80",
                "443"
              ],
              "sourceAddressPrefixes": [
              ],
              "destinationAddressPrefixes": [
              ]
            }
          }
        ]
      },
      "resources": [
        {
          "type": "providers/diagnosticSettings",
          "name": "Microsoft.Insights/service",
          "dependsOn": [
            "[concat(variables('Deploymentnsg'),'-nsgSNWAF01')]"
          ],
          "apiVersion": "2015-07-01",
          "properties": {
            "workspaceId": "[variables('OMSworkspaceID')]",
            "logs": [
              {
                "category": "NetworkSecurityGroupEvent",
                "enabled": true
              },
              {
                "category": "NetworkSecurityGroupRuleCounter",
                "enabled": true
              }
            ]
          }
        }
      ]
    },
    {
      "apiVersion": "2018-07-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('Deploymentnsg'),'-nsgSNFE01')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "ALL_JMP_IN_Allow_RDP01",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefixes": "[parameters('Global').PublicIPAddressforRemoteAccess]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1130,
              "direction": "Inbound"
            }
          },
          {
            "name": "ALL_JMP_IN_Allow_SSH01",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefixes": "[parameters('Global').PublicIPAddressforRemoteAccess]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1140,
              "direction": "Inbound"
            }
          },
          {
            "name": "ALL_JMP_IN_Allow_WEB01",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefixes": "[parameters('Global').PublicIPAddressforRemoteAccess]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1150,
              "direction": "Inbound"
            }
          }
        ]
      },
      "resources": [
        {
          "type": "providers/diagnosticSettings",
          "name": "Microsoft.Insights/service",
          "dependsOn": [
            "[concat(variables('Deploymentnsg'),'-nsgSNFE01')]"
          ],
          "apiVersion": "2015-07-01",
          "properties": {
            "workspaceId": "[variables('OMSworkspaceID')]",
            "logs": [
              {
                "category": "NetworkSecurityGroupEvent",
                "enabled": true
              },
              {
                "category": "NetworkSecurityGroupRuleCounter",
                "enabled": true
              }
            ]
          }
        }
      ]
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('Deploymentnsg'),'-nsgSNMT01')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
        ]
      },
      "resources": [
        {
          "type": "providers/diagnosticSettings",
          "name": "Microsoft.Insights/service",
          "dependsOn": [
            "[concat(variables('Deploymentnsg'),'-nsgSNMT01')]"
          ],
          "apiVersion": "2015-07-01",
          "properties": {
            "workspaceId": "[variables('OMSworkspaceID')]",
            "logs": [
              {
                "category": "NetworkSecurityGroupEvent",
                "enabled": true
              },
              {
                "category": "NetworkSecurityGroupRuleCounter",
                "enabled": true
              }
            ]
          }
        }
      ]
    },
    {
      "apiVersion": "2018-07-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('Deploymentnsg'),'-nsgSNMT02')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
        ]
      },
      "resources": [
        {
          "type": "providers/diagnosticSettings",
          "name": "Microsoft.Insights/service",
          "dependsOn": [
            "[concat(variables('Deploymentnsg'),'-nsgSNMT02')]"
          ],
          "apiVersion": "2015-07-01",
          "properties": {
            "workspaceId": "[variables('OMSworkspaceID')]",
            "logs": [
              {
                "category": "NetworkSecurityGroupEvent",
                "enabled": true
              },
              {
                "category": "NetworkSecurityGroupRuleCounter",
                "enabled": true
              }
            ]
          }
        }
      ]
    },
    {
      "apiVersion": "2018-07-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('Deploymentnsg'),'-nsgSNBE01')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "APIM_Management_Inbound",
            "properties": {
              "description": "APIM_Management_Inbound",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3443",
              "sourceAddressPrefix": "ApiManagement",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1120,
              "direction": "Inbound",
              "sourcePortRanges": [
              ],
              "destinationPortRanges": [
              ],
              "sourceAddressPrefixes": [
              ],
              "destinationAddressPrefixes": [
              ]
            }
          },
          {
            "name": "APIM_Client_Inbound",
            "properties": {
              "description": "APIM_Client_Inbound",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1130,
              "direction": "Inbound",
              "sourcePortRanges": [
              ],
              "destinationPortRanges": [
                "443",
                "80"
              ],
              "sourceAddressPrefixes": [
              ],
              "destinationAddressPrefixes": [
              ]
            }
          }
        ]
      },
      "resources": [
        {
          "type": "providers/diagnosticSettings",
          "name": "Microsoft.Insights/service",
          "dependsOn": [
            "[concat(variables('Deploymentnsg'),'-nsgSNBE01')]"
          ],
          "apiVersion": "2015-07-01",
          "properties": {
            "workspaceId": "[variables('OMSworkspaceID')]",
            "logs": [
              {
                "category": "NetworkSecurityGroupEvent",
                "enabled": true
              },
              {
                "category": "NetworkSecurityGroupRuleCounter",
                "enabled": true
              }
            ]
          }
        }
      ]
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('Deploymentnsg'),'-nsgSNBE02')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
        ]
      },
      "resources": [
        {
          "type": "providers/diagnosticSettings",
          "name": "Microsoft.Insights/service",
          "dependsOn": [
            "[concat(variables('Deploymentnsg'),'-nsgSNBE02')]"
          ],
          "apiVersion": "2015-07-01",
          "properties": {
            "workspaceId": "[variables('OMSworkspaceID')]",
            "logs": [
              {
                "category": "NetworkSecurityGroupEvent",
                "enabled": true
              },
              {
                "category": "NetworkSecurityGroupRuleCounter",
                "enabled": true
              }
            ]
          }
        }
      ]
    },
    {
      "apiVersion": "2018-07-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[concat(variables('Deploymentnsg'),'-nsgAzureBastionSubnet')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "Inbound_Bastion_443",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [
              ],
              "destinationPortRanges": [
              ],
              "sourceAddressPrefixes": [
              ],
              "destinationAddressPrefixes": [
              ]
            }
          },
          {
            "name": "Inbound_Bastion_GatewayManager_443",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              // "destinationPortRange": "443",
              "sourceAddressPrefix": "GatewayManager",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound",
              "sourcePortRanges": [
              ],
              "destinationPortRanges": [
                "443",
                "4443"
              ],
              "sourceAddressPrefixes": [
              ],
              "destinationAddressPrefixes": [
              ]
            }
          },
          {
            "name": "Outbound_Bastion_AzureCloud_443",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureCloud",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound",
              "sourcePortRanges": [
              ],
              "destinationPortRanges": [
              ],
              "sourceAddressPrefixes": [
              ],
              "destinationAddressPrefixes": [
              ]
            }
          },
          {
            "name": "Outbound_Bastion_FE01_3389_22",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound",
              "sourcePortRanges": [
              ],
              "destinationPortRanges": [
                "3389",
                "22"
              ],
              "destinationAddressPrefix": "VirtualNetwork",
              // "destinationAddressPrefixes": [
              //   "[concat(variables('networkId'),'.','32/27')]"
              // ],
              "sourceAddressPrefixes": [
              ]
            }
          }
        ]
      },
      "resources": [
        {
          "type": "providers/diagnosticSettings",
          "name": "Microsoft.Insights/service",
          "dependsOn": [
            "[concat(variables('Deploymentnsg'),'-nsgAzureBastionSubnet')]"
          ],
          "apiVersion": "2015-07-01",
          "properties": {
            "workspaceId": "[variables('OMSworkspaceID')]",
            "logs": [
              {
                "category": "NetworkSecurityGroupEvent",
                "enabled": true
              },
              {
                "category": "NetworkSecurityGroupRuleCounter",
                "enabled": true
              }
            ]
          }
        }
      ]
    }
  ],
  "outputs": {
  }
}
